padding on mobile devices fixed

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
-    padding-bottom: 10px;
+    padding-bottom: 80px;
   }
 
   .controls .key {
